--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -11,7 +11,7 @@ containers=org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debu
 derived.resources=.gradle,build
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:\:/Program Files/Java/jdk1.8.0_241
+java.home=C\:/Program Files/Java/jdk1.8.0_241
 jvm.arguments=
 natures=org.eclipse.jdt.core.javanature
 offline.mode=false
